--- a/calbill/src/App.css
+++ b/calbill/src/App.css
@@ -1,28 +1,77 @@
 .App {
   text-align: center;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 30px;
+    display: block;
+    margin: auto;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 60px;
+  padding: 5px;
+  text-align: center;
   color: white;
 }
 
-.App-title {
+.App-promotion {
+  border: 5px border-style black;
+  padding: 5px;
+  font-size: 0.8em;
+  padding: 10px;
+  margin: 5px;
+}
+
+
+.App-promotion .redtext {
+ color: red;
+}
+
+.App_title {
   font-size: 1.5em;
 }
 
 .App-intro {
-  font-size: large;
+  flex: 1 ;
+  width: 100%;
+}
+
+.App-Main {
+  padding:20px;
+  flex: 1;
+}
+
+.App-footer {
+  background-color: #222;
+  height: 30px;
+  padding: 5px;
+  font-size: 0.5em;
+  color: white;
+}
+
+
+.Stlye-botton {
+  margin:5px;
+  padding:10px;
+  text-align: center;
+}
+
+.Stlye-Input {
+  margin:5px;
+  padding:10px;
+  width: 50px;
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
